--- a/src/main/resources/assets/testmod/lang/en_us.json
+++ b/src/main/resources/assets/testmod/lang/en_us.json
@@ -1,4 +1,7 @@
 {
   "item.testmod.raw_tanzanite": "Raw Tanzanite",
-  "item.testmod.tumbled_tanzanite": "Tumbled Tanzanite"
+  "item.testmod.tumbled_tanzanite": "Tumbled Tanzanite",
+  "itemgroup.gems": "Gems",
+  "block.testmod.ds_raw_tanzanite": "Deepslate Raw Tanzanite Ore",
+  "block.testmod.tanzanite_block": "Tumbled Tanzanite Block"
 }
