added the rock tumbler with full functionality and removed the stonecutter tumbling recipe, added a screen handler and block entity handler, made tanzanite slightly more common

--- a/src/main/resources/assets/testmod/lang/en_us.json
+++ b/src/main/resources/assets/testmod/lang/en_us.json
@@ -14,5 +14,6 @@
   "block.testmod.strange_tree_planks": "Strange Tree Planks",
   "block.testmod.strange_tree_leaves": "Strange Tree Leaves",
 
-  "block.testmod.strange_tree_sapling": "Strange Tree Sapling"
+  "block.testmod.strange_tree_sapling": "Strange Tree Sapling",
+  "block.testmod.rock_tumbler": "Rock Tumbler"
 }
